# xdebt

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  configuration.yml  effective-pom.xml  java.yml  node.yml  other.yml  richface.yml  rules.yml  test.sh  tmplog
all_roadmap/: angular.yml  docker.yml
proto/: analyze.proto
roadmap/: angular.yml  devex.yml  docker.yml  java.yml  node.yml  other.yml  richface.yml  roadmap.yml  spring.yml
src/: analyze_one_repo.rs  analyze_package_json_content.rs  analyze_pom_content.rs  append_json_to_csv.rs  consume_messages.rs  create_config.rs  csv_to_excel.rs  display_menu.rs  fetch_repositories.rs  generate_analysis.rs  generate_pom_analysis_json.rs  grpc_server.rs  main.rs  models.rs  process_pom.rs  run_maven_effective_pom.rs  types.rs
src/boot/: init_tracing.rs  load_config.rs  mod.rs  read_yaml.rs  watch_config_for_reload.rs
src/kpi/: compare_versions.rs  compute_kpi.rs  find_upgrade_suggestion.rs  find_upgrade_suggestions.rs  is_lower_version.rs  is_valid_timeframe.rs  mod.rs  models.rs  parse_version.rs  version_matches.rs
src/plugins/: analyze_one_repo.rs  mod.rs
src/roadmap/: fetch_endoflife_data.rs  mod.rs  models.rs  persist_to_sled.rs  process_yaml_files.rs  read_yaml.rs  retrieve_from_sled.rs
src/services/: analyze_all_repositories.rs  analyze_project_repositories.rs  analyze_specific_project.rs  analyze_specific_repository.rs  get_distinct_dependencies.rs  get_distinct_products.rs  get_product_version.rs  get_projects.rs  get_roadmap.rs  mod.rs  (+2 more)
test/: one_repo.sh
test_roadmap/: devex.yml  java.yml
tmp/: effective_shared-ace-client.xml
tmp_ok/: cybsdk.json  devsup.json  education.json  fisc.json  formation.json  instit.json  kube.json  ojvmp.json  ptep.json  ses.json  shared.json
toto/: angular.yml  spring.yml
(+1908 files in other folders)
