[package]
name = "xdebt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xdebt"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
calamine = "0.25.0"
csv = "1.3.0"
dialog = "0.3.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["blocking", "rustls-tls"] }
roxmltree = "0.20.0"
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
