[package]
name = "xdebt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xdebt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.92"
base64 = "0.22.1"
calamine = "0.25.0"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
dialog = "0.3.0"
dialoguer = "0.11.0"
dotenv = "0.15.0"
futures = "0.3.31"
iggy = "0.6.32"
notify = "6.1.1"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "rustls-tls"] }
roxmltree = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
serde_yaml = "0.9.34"
sled = "0.34.7"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
